--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="cta">
         <a href="projects.html" class="btn ghost">View Projects</a>
         <a href="contact.html" class="btn ghost">Contact Me</a>
-<a href="Douaa_Fersi_CV.pdf" download class="btn ghost">
+<a href="Douaa_Fersi_CV.pdf"  class="btn ghost">
           Download CV
         </a>
       </div>
@@ -105,5 +105,6 @@
 
 </body>
 </html>
+
 
 
