--- a/index.html
+++ b/index.html
@@ -102,9 +102,21 @@
   </section>
 
 </main>
+<footer class="footer">
+  <div class="footer-content">
+    <p>© 2026 Douaa Fersi · Computer Science Student</p>
+
+    <div class="footer-links">
+      <a href="https://github.com/DOUAA-FERSI" target="_blank">GitHub</a>
+      <a href="contact.html">Contact</a>
+      <a href="mailto:douaafersii@gmail.com">Email</a>
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
+
 
 
 
