--- a/index.html
+++ b/index.html
@@ -109,13 +109,14 @@
     <div class="footer-links">
       <a href="https://github.com/DOUAA-FERSI" target="_blank">GitHub</a>
       <a href="contact.html">Contact</a>
-      <a href="mailto:douaafersii@gmail.com">Email</a>
-    </div>
+<a href="https://mail.google.com/mail/?view=cm&fs=1&to=douaafersii@gmail.com"
+   target="_blank">Email</a>        </div>
   </div>
 </footer>
 
 </body>
 </html>
+
 
 
 
