--- a/projects.html
+++ b/projects.html
@@ -91,7 +91,7 @@
         <span>Packet Tracer</span>
       </div>
       <div class="project-links">
-        <a href="#">Screenshots</a>
+        <a href="Cisco_Packet_Tracer_Topology.pdf">Screenshots</a>
       </div>
     </div>
 
@@ -113,5 +113,6 @@
 
 </body>
 </html>
+
 
 
